--- a/client/src/components/CourseList/CourseList.css
+++ b/client/src/components/CourseList/CourseList.css
@@ -1,6 +1,67 @@
 #course-search {
-  margin-left: 3.5vw;
-  margin-top: 0.5vw;
-  margin-bottom: 1vw;
+  margin: 0.5vw 1vw 0;
   width: 27vw;
+}
+
+#course-search {
+  margin-left:4.2vw;
+}
+
+.filters-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1vw;
+}
+
+.filters-menu {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1vw; /* Adjust margin if needed for spacing */
+}
+
+.filters-menu label {
+  margin-bottom: 0.5vw;
+}
+
+.menu-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 24px;
+  width: 24px;
+  padding: 0;
+  margin-left: 1vw;
+}
+
+.menu-button .line {
+  background-color: black;
+  height: 2px;
+  width: 24px;
+  transition: all 0.3s ease-in-out;
+  border-radius: 2px;
+}
+
+.menu-button:hover .line,
+.menu-button.open:hover .line {
+  background-color: #48bf48;
+}
+
+.menu-button:hover,
+.menu-button.open:hover {
+  background-color: white;
+}
+
+.menu-button.open .line:nth-child(1) {
+  transform: rotate(45deg) translate(6px, 6px);
+}
+
+.menu-button.open .line:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-button.open .line:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
 }
