--- a/client/src/components/Home/Carousel.css
+++ b/client/src/components/Home/Carousel.css
@@ -4,16 +4,23 @@
   justify-content: center;
   align-items: center;
   width: 600px;
-  height: 400px;
+  height: 600px;
+  padding-bottom: 3rem;
 }
 
 .slide {
   border-radius: 0.5rem;
   box-shadow: 0px 0px 7px #666;
+  width: 100%;
+  height: 100%;
+}
+
+.slide img {
   object-fit: cover;
   object-position: center top;
   width: 100%;
   height: 100%;
+  border-radius: 0.5rem;
 }
 
 .slide-hidden {
@@ -38,4 +45,20 @@
 
 .arrow-right {
   right: 1rem;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 3rem;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 2.2rem;
+  font-family: 'Michroma', sans-serif;
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+
+.overlay:hover {
+  text-decoration: underline;
 }
