--- a/client/src/components/DiscussionForum/DiscussionForum.css
+++ b/client/src/components/DiscussionForum/DiscussionForum.css
@@ -34,3 +34,82 @@
     transform: scale(1.05);
     cursor: pointer;
 }
+
+.add-discussion-button {
+    display: block;
+    width: 40%;
+    padding: 10px 20px;
+    margin-top: 10px;
+    background-color: #9B6D96;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+
+.add-discussion-button:hover {
+    background-color: #DEC7DC;
+    color: #fff;
+}
+
+.discussion-form {
+    padding: 20px;
+    margin-top: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.form-input, .form-textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.button-container {
+    display: flex; 
+    justify-content: start;  
+    margin-top: 10px;  
+}
+
+.form-submit-button, .form-cancel-button {
+    display: inline-flex;  
+    align-items: center;  
+    justify-content: center;  
+    padding: 10px 20px;  
+    margin-right: 10px; 
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    border: none; 
+    transition: background-color 0.3s ease;
+}
+
+.form-submit-button {
+    background-color: #9B6D96;
+    color: #fff;
+}
+
+.form-submit-button:hover {
+    background-color: #DEC7DC;
+    color: #fff;
+}
+
+.form-cancel-button {
+    background-color: #ccc;
+    color: #333;
+}
+
+.form-cancel-button:hover {
+    background-color: #bbb;
+}
