--- a/client/src/components/Categories/Categories.css
+++ b/client/src/components/Categories/Categories.css
@@ -1,5 +1,3 @@
-
-/* categories => courses */
 .categories-main-page {
   display: flex;
   flex-direction: row;
@@ -12,9 +10,10 @@
   margin: 5px;
   word-wrap: break-word;
   width: 25vw;
+  height: 300px; /* Set a fixed height for uniformity */
   transition: .2s;
-  overflow: hidden;
-  max-height: 500px;
+  overflow: hidden; /* Keeps any overflow content hidden */
+  max-height: 300px; /* Ensure max height matches fixed height */
 }
 
 .category a {
@@ -44,4 +43,6 @@
 
 .category img {
   width: 100%;
+  height: 400px; /* Set a fixed height for images */
+  object-fit: cover; /* Ensures images cover the area without distortion */
 }
