--- a/client/src/components/Course/Course.css
+++ b/client/src/components/Course/Course.css
@@ -1,9 +1,10 @@
 .course-card {
   width: 25vw;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(157, 109, 150, 0.3) 0px 4px 6px -1px, rgba(157, 109, 150, 0.2) 0px 2px 4px -1px;
   padding: 10px 20px;
   margin: 20px;
   line-height: 30px;
+  border-radius: 10px;
 }
 
 .course-list {
@@ -12,10 +13,11 @@
 }
 
 .course-card img {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   object-position: center top;
+  border-radius: 5px;
 }
 
 .course-title {
@@ -24,12 +26,12 @@
 
 .star-inner {
   font-size: 2rem;
-  color: gold;
+  color: #FFD54F;
 }
 
 .star-outer {
   font-size: 2rem;
-  color: lightgrey;
+  color: white;
 }
 
 .star-container {
@@ -39,9 +41,20 @@
 
 .ratings-paragraph {
   margin-left: 10px;
-  color: grey;
+  color: white;
 }
 
 .ratings-paragraph:hover {
   text-decoration: underline;
+}
+
+.course-card a {
+  color: white;
+  text-decoration: none; 
+  font-family: 'Michroma', sans-serif;
+}
+
+.course-card a:hover,
+.course-card a:visited {
+  color: white;
 }
