--- a/client/src/components/CourseContent/CourseContent.css
+++ b/client/src/components/CourseContent/CourseContent.css
@@ -4,6 +4,11 @@
   padding: 10px 20px;
   margin: 20px;
   line-height: 30px;
+  position: relative;
+}
+
+.video-container {
+  margin-bottom: 10px;
 }
 
 .course-content img {
@@ -21,4 +26,31 @@ img.check-mark {
   width: 14px;
   height: 14px;
   margin-left: 5px;
+}
+
+.progress-tree {
+  position: absolute;
+  left: -50px;
+  top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.progress-item {
+  display: flex;
+  align-items: center;
+}
+
+.progress-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 5px 0;
+}
+
+.progress-line {
+  width: 2px;
+  height: 20px;
+  background-color: lightgray; 
+  margin-left: 4px; 
 }
