--- a/client/src/components/CourseContentList/CourseContentList.css
+++ b/client/src/components/CourseContentList/CourseContentList.css
@@ -1,3 +1,22 @@
 #course-title {
   margin-left: 160px;
 }
+
+.go-to-all-courses {
+  display: inline-block;
+  margin-left: 3.7rem;
+  margin-bottom: 3.7rem;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #DEC7DC;
+  color: #9B6D96;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.go-to-all-courses:hover {
+  background-color: #C5A3B5;
+}
