--- a/client/src/components/AdminCategories/AdminCategories.css
+++ b/client/src/components/AdminCategories/AdminCategories.css
@@ -5,3 +5,23 @@
   justify-content: center;
   align-items: center;
 }
+
+.admin-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.admin-add-category-button {
+  margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.admin-add-category-modal {
+  margin-bottom: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
